<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Mehmet Ozdemir on 9/18/19 3:19 PM
  ~ Copyright (c) 2019 . All rights reserved.
  ~ Last modified 9/18/19 12:01 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.login.LoginFragment">

    <ImageView
        android:id="@+id/image_view_app_icon"
        android:layout_width="@dimen/size_icon_xlarge"
        android:layout_height="@dimen/size_icon_xlarge"
        android:layout_marginTop="@dimen/margin_container_xxxxlarge"
        android:src="@drawable/icon_shopping_basket"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_container_medium"
        android:text="@string/app_name_splash_screen"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_app_icon" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_container_xxlarge"
        android:layout_marginTop="@dimen/margin_container_xxxlarge"
        android:layout_marginEnd="@dimen/margin_container_xxlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_app_name">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_container_large"
            android:background="@drawable/background_edit_text"
            android:drawableStart="@drawable/icon_password"
            android:drawablePadding="@dimen/padding_drawable"
            android:hint="@string/hint_text_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_username" />

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:drawableStart="@drawable/icon_user"
            android:drawablePadding="@dimen/padding_drawable"
            android:hint="@string/hint_text_username"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_container_large"
            android:theme="@style/MySwitchStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_container_small"
            android:layout_marginBottom="@dimen/margin_container_xsmall"
            android:text="@string/info_text_remember_me"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="@id/switch_remember_me"
            app:layout_constraintStart_toEndOf="@id/switch_remember_me"
            app:layout_constraintTop_toTopOf="@id/switch_remember_me" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_button"
            android:layout_marginTop="@dimen/margin_container_xxxxlarge"
            android:layout_marginBottom="@dimen/margin_container_medium"
            android:background="@drawable/background_button"
            android:text="@string/button_text_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_remember_me" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_progress_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha=".5"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>